project/manifests/base/todo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: todo-app
          image: PROJECT/APP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /usr/src/app/files
              name: shared-volume
          resources:
            requests:
              cpu: "15m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "150Mi"
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              port: 3000
              path: /healthz
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
              port: 3000
              path: /healthz
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 3000
