project/manifests/base/todo-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: PROJECT/BACKEND
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "15m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              port: 3000
              path: /healthz
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
              port: 3000
              path: /healthz
---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 2349
      protocol: TCP
      targetPort: 3000
